(library
 (name dune_rpc_eio_example)
 (package dune-rpc-eio-example)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a -open Base)
 (libraries base core.command dune-rpc-eio eio eio_main)
 (preprocess
  (pps
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value
   ppx_js_style
   -check-doc-comments)))
